# x264

./: .gitignore  CMakeLists.txt  build.cmd  example.c  readme.md  x264.c  x264_api.h
common/: common.c  cpu.h  opencl.c  osdep.h
common/x86/: cpu-a.asm  mc-c.c  predict-c.c  util.h
encoder/: encoder.c
msys64/usr/local/include/libavutil/: ffversion.h
test/: x264test.c
